terraform/main.tf
provider "aws" { region = var.region }

resource "aws_key_pair" "k8s" {
  key_name   = "k8s-key"
  public_key = file("C:/Users/20114/.ssh/k8s_key.pub")
}
# VPC + Subnet + IGW

resource "aws_vpc" "this" {
  cidr_block = "10.0.0.0/16"
}
# Subnet 
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.this.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.this.id
}
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.this.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}
resource "aws_route_table_association" "rta" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.rt.id
}

# Security group
resource "aws_security_group" "k8s" {
  vpc_id = aws_vpc.this.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = [var.my_ip] # restrict K8s API
  }

  ingress {
    from_port   = 30000
    to_port     = 32767
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Master Node
resource "aws_instance" "master" {
  ami                         = var.ami_id
  instance_type               = var.master_type
  key_name                    = aws_key_pair.k8s.key_name
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.k8s.id]
  associate_public_ip_address = true
  user_data                   = file("${path.module}/userdata/master.sh")

  tags = { Name = "k8s-master" }
}

# Worker Nodes
resource "aws_instance" "workers" {
  count                       = var.worker_count
  ami                         = var.ami_id
  instance_type               = var.worker_type
  key_name                    = aws_key_pair.k8s.key_name
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.k8s.id]
  associate_public_ip_address = true
  user_data                   = file("${path.module}/userdata/worker.sh")

  tags = { Name = "k8s-worker-${count.index}" }
}
